--- a/.github/workflows/myphp.yml
+++ b/.github/workflows/myphp.yml
@@ -29,8 +29,6 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_PRIVATE_KEY }}
-          script: |
-            cd /var/www/html/
-            git pull origin main
-            # Other deployment commands
-
+      - name: Deploy to server
+        run: |
+          rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" . ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:/path/to/your/project
