--- a/.github/workflows/myphp.yml
+++ b/.github/workflows/myphp.yml
@@ -31,4 +31,4 @@ jobs:
           key: ${{ secrets.SERVER_PRIVATE_KEY }}
       - name: Deploy to server
         run: |
-          rsync -avz --delete -e "ssh -i ${{ secrets.PRIVATE_KEY }} -o StrictHostKeyChecking=no" ./ ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:/var/www/html/
+          rsync -avz --delete -e "ssh -i ${{ secrets.SERVER_PRIVATE_KEY }} -o StrictHostKeyChecking=no" ./ ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:/var/www/html/
