--- a/.github/workflows/myphp.yml
+++ b/.github/workflows/myphp.yml
@@ -17,12 +17,12 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
-
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Deploy to server
         run: |
-          rsync -avz --delete -e "ssh -i ${{ secrets.SERVER_PRIVATE_KEY }} -o StrictHostKeyChecking=no" ./ ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:/var/www/html/
+          sudo apt-get update && sudo apt-get install -y sshpass
+          sshpass -p ${{ secrets.SERVER_PASSWORD }} rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ./ ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:/path/to/your/project
