--- a/.github/workflows/myphp.yml
+++ b/.github/workflows/myphp.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Deploy to server
         run: |
           sudo apt-get update && sudo apt-get install -y sshpass
-          sshpass -p ${{ secrets.SERVER_PASSWORD }} rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ./ ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:/path/to/your/project
+          sshpass -p ${{ secrets.SERVER_PASSWORD }} rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ./ ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:/var/www/html/
