--- a/.github/workflows/myphp.yml
+++ b/.github/workflows/myphp.yml
@@ -18,6 +18,6 @@ jobs:
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.PRIVATE_KEY }}
+          key: ${{ secrets.SERVER_PASSWORD }}
           script: |
             rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ${{ github.workspace }}/ /var/www/html/
