--- a/.github/workflows/myphp.yml
+++ b/.github/workflows/myphp.yml
@@ -10,14 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - name: Deploy to server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SERVER_PASSWORD }}
-          script: |
-            rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ${{ github.workspace }}/ /var/www/html/
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y sshpass
+          sshpass -p ${{ secrets.SERVER_PASSWORD }} rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ${{ github.workspace }}/ ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:/var/www/html/
