--- a/.github/workflows/myphp.yml
+++ b/.github/workflows/myphp.yml
@@ -14,4 +14,4 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y sshpass
-          sshpass -p ${{ secrets.SERVER_PASSWORD }} rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ${{ github.workspace }}/ ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:/var/www/html/
+          sshpass -p ${{ secrets.SERVER_PASSWORD }} rsync -avz "ssh -o StrictHostKeyChecking=no" ./ ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }}:/var/www/html/
